<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PartyApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="song_title">Song Title</string>
    <string name="song_artist">Artist</string>
    <string name="song_duration">Duration</string>
    <string name="album_art">Album Artwork</string>
    <string name="play_button">Play Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="song_list_album_title">Album Title</string>
    <string name="stop_button">Stop Button</string>

</resources>
