<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/song_list_artwork"
        android:src="@drawable/ic_launcher"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/album_art"/>

    <RelativeLayout
        android:layout_toEndOf="@id/song_list_artwork"
        android:layout_toRightOf="@id/song_list_artwork"
        android:layout_width="fill_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/song_list_title"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/song_title" />

        <TextView
            android:id="@+id/song_list_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="2"
            android:layout_below="@id/song_list_title"
            android:text="@string/song_list_album_title" />

        <TextView
            android:id="@+id/song_list_artist"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="2"
            android:layout_below="@id/song_list_album"
            android:text="@string/song_artist" />
        
        <TextView
            android:id="@+id/song_list_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_list_title"
            android:layout_toRightOf="@id/song_list_album"
            android:layout_marginLeft="100dp"
            android:text="@string/song_duration" />

    </RelativeLayout>

</RelativeLayout>